Spring Data CRUD-1

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,3 +14,10 @@ register_age=uye yasi
 register_date=uye kayit tarihi
 register_submit=Gonder
 register_reset=Temizle
+
+#computer
+computer_computerId=Bilgi id
+computer_computerName=Bilgi Ad?
+computer_computerPrice=Bilgi Fiyat
+computer_computerMacId=Mac id
+computer_createdDate=tarih
